Further minor cleaning/fixes, I really should have squashed these commits

--- a/client/styles/form.css
+++ b/client/styles/form.css
@@ -19,7 +19,7 @@
     font-weight: 400;
     padding: 0.75rem 1rem;
     font-size: 1.15rem;
-    width: 20rem;
+    width: 23rem;
     border: none;
     outline: none;
     transition: all 0.2s;
